fixed project hero images shifting content on load

--- a/_sass/_modules/_project.scss
+++ b/_sass/_modules/_project.scss
@@ -11,3 +11,9 @@
     letter-spacing: .05em;
   }
 }
+
+.project-hero {
+  padding-bottom: 57.14285714%; // ratio = height / width
+  height:0;
+  overflow: hidden;
+}
